; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_subr_sbuf.c_sbuf_finish.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_subr_sbuf.c_sbuf_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbuf = type { i8*, i64 }

@SBUF_OVERFLOWED = common dso_local global i32 0, align 4
@SBUF_FINISHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sbuf_finish(%struct.sbuf* %0) #0 {
  %2 = alloca %struct.sbuf*, align 8
  store %struct.sbuf* %0, %struct.sbuf** %2, align 8
  %3 = load %struct.sbuf*, %struct.sbuf** %2, align 8
  %4 = call i32 @assert_sbuf_integrity(%struct.sbuf* %3)
  %5 = load %struct.sbuf*, %struct.sbuf** %2, align 8
  %6 = call i32 @assert_sbuf_state(%struct.sbuf* %5, i32 0)
  %7 = load %struct.sbuf*, %struct.sbuf** %2, align 8
  %8 = getelementptr inbounds %struct.sbuf, %struct.sbuf* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  %10 = load %struct.sbuf*, %struct.sbuf** %2, align 8
  %11 = getelementptr inbounds %struct.sbuf, %struct.sbuf* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds i8, i8* %9, i64 %12
  store i8 0, i8* %13, align 1
  %14 = load %struct.sbuf*, %struct.sbuf** %2, align 8
  %15 = load i32, i32* @SBUF_OVERFLOWED, align 4
  %16 = call i32 @SBUF_CLEARFLAG(%struct.sbuf* %14, i32 %15)
  %17 = load %struct.sbuf*, %struct.sbuf** %2, align 8
  %18 = load i32, i32* @SBUF_FINISHED, align 4
  %19 = call i32 @SBUF_SETFLAG(%struct.sbuf* %17, i32 %18)
  ret void
}

declare dso_local i32 @assert_sbuf_integrity(%struct.sbuf*) #1

declare dso_local i32 @assert_sbuf_state(%struct.sbuf*, i32) #1

declare dso_local i32 @SBUF_CLEARFLAG(%struct.sbuf*, i32) #1

declare dso_local i32 @SBUF_SETFLAG(%struct.sbuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
